--- a/config.json
+++ b/config.json
@@ -7,6 +7,7 @@
         "ADDRESS": "",
         "WEBSITE": ""
     },
+    "LOCAL_STORAGE_LOCATION": "app/storage/",
     "SUPER_ADMIN": {
         "EMAIL": "admin@example.com",
         "PASSWORD": "admin",
