--- a/.gitignore
+++ b/.gitignore
@@ -162,4 +162,8 @@ cython_debug/
 
 .vscode/
 .trash/
+# Ignore all contents of app/storage/ folder
 app/storage/*
+
+# Except the folder itself
+!app/storage/
