Add tool to take screenshots of websites and Reddit posts. along with temp file storage

--- a/app/api/v1/tools/nlp/config.json
+++ b/app/api/v1/tools/nlp/config.json
@@ -8,6 +8,7 @@
         "output_file_format": "NA",
         "system_folder_name": "NA",
         "use_db": false,
-        "use_storage": false
+        "use_storage": false,
+        "use_temp_folder": false
     }
 }
