--- a/app/api/v1/tools/synthesize/config.json
+++ b/app/api/v1/tools/synthesize/config.json
@@ -6,8 +6,9 @@
         "python_file_name": "elevenlabs.py",
         "mime_type": "audio/mpeg",
         "output_file_format": ".mp3",
-        "system_folder_name": "audios",
+        "system_folder_name": ["audios"],
         "use_db": true,
-        "use_storage": true
+        "use_storage": true,
+        "use_temp_folder": false
     }
 }
