--- a/app/api/v1/tools/scraping/config.json
+++ b/app/api/v1/tools/scraping/config.json
@@ -8,6 +8,7 @@
         "output_file_format": "NA",
         "system_folder_name": "NA",
         "use_db": false,
-        "use_storage": false
+        "use_storage": false,
+        "use_temp_folder": false
     }
 }
