--- a/app/api/v1/tools/scraping/config.json
+++ b/app/api/v1/tools/scraping/config.json
@@ -1,7 +1,7 @@
 {
     "main_tool": "scraping",
-    "Reddit": {
-        "sub_tool_name": "Reddit",
+    "reddit": {
+        "sub_tool_name": "reddit",
         "description": "Scrape Text Based Reddit for posts and comments",
         "python_file_name": "reddit.py",
         "mime_type": "NA",
